--- a/css/ad-acer-Aspire3.css
+++ b/css/ad-acer-Aspire3.css
@@ -4,9 +4,6 @@
   box-sizing: border-box;
   font-family: arial;
 }
-html{
-  scroll-behavior: smooth;
-}
 .outer-border{
   border: 1px solid gray;
   border-radius: 10px;
@@ -24,7 +21,7 @@ html{
 header div{
   display: inline;
    color: gray;
-   margin-left: 40px;
+   padding-left: 20px;
    font-size: 22px;
 }
 div h1{
