--- a/figma/css/style.css
+++ b/figma/css/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: sans-serif;
+  /* background-color: rgba(255,0,0,0.05); */
 }
 ul,ol{
   list-style-type: none;
@@ -25,6 +26,7 @@ header nav,header ul,header nav .logo-wrapper{
   display: flex;
   justify-content: space-around;
   align-items: center;
+
   gap: 1rem;
 }
 .logo{
@@ -35,11 +37,11 @@ header nav,header ul,header nav .logo-wrapper{
 header nav div span{
   font-weight: 700;
 }
-#extrabold{
+.extrabold{
   font-weight: 800;
 }
-header{
-  margin: 25px;
+header nav{
+  padding: 2rem;
 }
 
 #signin{
@@ -53,6 +55,58 @@ header{
   border: 1px solid #F53855;
   border-radius: 20px;
   font-weight: bold;
-
+}
+.signup:hover{
+  color: white;
+  background-color: #F53855;
+  cursor: pointer;
+  transition: all;
+  transition-duration:0.5s ;
+}
+.banner{
+  display: flex;
+  padding: 2rem;
+/* justify-content: space-between; */
+}
+.banner>* {
+  /* padding: 2rem; */
+  width: 50%;
 
 }
+.banner article > *{
+  margin-top: 1rem;
+}
+.Get-Started{
+  padding: 1rem;
+  padding-left:30px;
+  padding-right: 30px;
+  color: white;
+  background-color: red;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 5px 5px 21px -5px red;
+}
+.banner img{
+  width: 50%;
+  object-fit: contain;
+}
+.banner h1{
+  font-size: 50px;
+}
+.users-servers{
+  display: flex;
+}
+
+/* .container{
+  display: flex;
+  margin: auto;
+  padding-left: 2rem;
+  padding-right: 2rem;
+} */
+/* @media(min-width:576px){
+  .container{
+    max-width:540px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+} */
